view all boards per UID; partial build with routeparams anchor

--- a/partials/view-boards.html
+++ b/partials/view-boards.html
@@ -1,7 +1,8 @@
 <div>
+    <h3>All Boards...</h3>
     <ul ng-repeat="board in boards">
         <li>
-            <h2>{{board.title}}</h2></a>
+            <a href="#!/boards/{{board.board_id}}">{{board.title}}</a>
         </li>
     </ul>
 </div>
