--- a/partials/nav.html
+++ b/partials/nav.html
@@ -8,8 +8,9 @@
     </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" ng-controller="UserCtrl">
+<nav class="navbar navbar-light" style="background-color:white;" ng-controller="UserCtrl">
         <a class="navbar-brand" href="#">Clearly Vague</a>
+        <p id="navbar-item">By USERNAME</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
