--- a/partials/view-pins.html
+++ b/partials/view-pins.html
@@ -1,10 +1,10 @@
-<div>
-    <ul ng-repeat='pin in pinArray'>
-        <li>
+<div class="container">
+    <div class="row">
+        <div class="col-4" ng-repeat='pin in pinArray'>
             <h3>{{pin.title}}</h3>
             <img src='{{pin.img}}' alt='{{pin.title}}'></img>
             <p>{{pin.notes}}</p>
             <button ng-click="deletePin(pin.id)">Delete</button>
-        </li>
-    </ul>
+        </div>
+    </div>
 </div>
