--- a/partials/home.html
+++ b/partials/home.html
@@ -1,1 +1,9 @@
-<h1>This is home.</h1>
+<div class="jumbotron">
+    <h1 class="display-3">Welcome to Clearly Vague!</h1>
+    <p class="lead">Waste away your sanity with pictures of cute doggos, expensive travel destinations, &amp; overly decadent food</p>
+    <hr class="my-4">
+    <p>Please login or create an account to continue...</p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" ng-click="login()" role="button">Start Pinning!</a>
+    </p>
+</div>
