--- a/partials/view-boards.html
+++ b/partials/view-boards.html
@@ -3,6 +3,7 @@
     <ul ng-repeat="board in boards">
         <li>
             <a href="#!/boards/{{board.board_id}}">{{board.title}}</a>
+            <img ng-show="board.img !== undefined" src="{{board.img}}" alt="{{board.title}}">
             <button ng-click="deleteBoard(board.board_id)">Delete Board</button>
         </li>
     </ul>
