--- a/partials/nav.html
+++ b/partials/nav.html
@@ -9,7 +9,7 @@
 </nav> -->
 
 <nav class="navbar navbar-light" style="background-color:whitesmoke;" ng-controller="UserCtrl">
-        <a class="navbar-brand" href="#">Clearly Vague</a>
+        <a class="navbar-brand" href="#">{ clearly {vague} }</a>
         <!-- <p id="navbar-item">By USERNAME</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
