--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -1,6 +1,28 @@
 .jumbotron {
     width: 70%;
-    margin: auto;
+    margin: 2vw auto;
     padding: 3vw;
     border-radius: 2vw;
+    background: lightcyan;
+    border: .2vw double cyan;
+    h1 {
+        background: radial-gradient(circle at 0 30%, lightblue 20%, gold 30%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 1.3vw;
+        padding: .3vw;
+    }
+}
+
+a {
+    cursor: pointer;
+}
+
+#startPin {
+    transition: all .5s;
+    &:hover{
+        color: rgb(255, 249, 218);
+        box-shadow: 0 0 3vw rgb(255, 227, 68);
+    }
 }
