--- a/partials/view-boards.html
+++ b/partials/view-boards.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <h3>All Boards...</h3>
     <ul ng-repeat="board in boards">
         <li>
@@ -7,3 +7,13 @@
         </li>
     </ul>
 </div>
+ -->
+
+<div class="container">
+        <div class="row">
+            <div class="col-3 pin" ng-repeat='board in boards'>
+                <h4><a href="#!/boards/{{board.board_id}}">{{board.title}}</a></h3>
+                    <button type="button" ng-click="deleteBoard(board.board_id)" class="btn btn-outline-danger btn btn-primary btn-sm">Delete</button>
+            </div>
+        </div>
+    </div>
