--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -15,3 +15,16 @@ img {
   margin: .45 em;
   padding: 1em;
 }
+
+.form {
+  margin: 1em;
+  padding: .5em;
+  border: 1px solid lightslategray;
+  border-radius: 10px;
+}
+
+.form button {
+  display: inline-block;
+  padding: auto;
+}
+
