styled both forms and board page

--- a/partials/create-board.html
+++ b/partials/create-board.html
@@ -1,4 +1,6 @@
-<div>
-    <input type="text" ng-model="board.title">
-    <button ng-click="saveBoard()">Add Board</button>
+<div class="form">
+    <h2>Add a New Board</h2>
+    <input class="form-control" type="text" placeholder="Board Title" ng-model="board.title">
+    <br>
+    <button type="button" class="btn btn-outline-danger" ng-click="saveBoard()">Save My Board</button>
 </div>
