--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light" style="background-color:whitesmoke;" ng-controller="UserCtrl">
-        <a class="navbar-brand" href="#">{ clearly {vague} }</a>
-        <!-- <p id="navbar-item">By USERNAME</a> -->
+        <span class="navbar-brand" href="#">{ clearly {vague} }</span>
+        <span ng-hide="isLoggedIn() ? link.hideWhenLoggedIn : !link.hideWhenLoggedIn" id="navbar-item">{{userName}}</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
