--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -2,6 +2,12 @@
   padding: 1em;
 }
 
+#byUser {
+    margin-left: 1.2vw;
+    font-size: .6em;
+    font-style: italic; 
+}
+
 img {
   max-width: 150px;
   height: 150px;
