--- a/partials/create-pin.html
+++ b/partials/create-pin.html
@@ -11,5 +11,5 @@
   <select class="custom-select" ng-model="pin.board_id" ng-options="board.board_id as board.title for board in userBoards"></select>
     <br>
     <br>
-    <button type="button" class="btn btn-outline-danger" ng-click="addPin()">Add My Pin</button>
+    <button type="button" class="btn btn-outline-danger" ng-click="savePin()">Save My Pin</button>
 </div>
